--- a/newbackend/.env.example
+++ b/newbackend/.env.example
@@ -166,6 +166,9 @@ JWT_SECRET_PROD=secret
 # Delay is in millisecond e.g. 7 days is 1000*60*60*24*7
 SESSION_EXPIRY=1000 * 60 * 60 * 24 * 7
 
+# my email address for sending the verification code
+EMAIL_USER=suppport@siyuhub.com
+
 # Site URLs:
 # Don't forget to set Node env to development in the Server configuration section above
 # if you want to run in dev mode
